Add generics for prepared statements
This commit adds generic type parameters to several places dealing with
prepared statements. This for instance allows us to have compile-time
type checking of the Category used in these objects, and aligns with the
type parameter used by Query. I have added support for a long free
parameter in the grammar, since this will be needed to handle timestamps.

This commit also converts StatementDescriptor from an interface to a
class, taking the Pojo type as a type parameter. This will reduce code
duplication since the implementation will not change from one DAO to
another, so we would end up with multiple identical implementations. I
have also added a getter for the StatementDescriptor in
PreparedStatement. This will prove useful in logging errors, when only
the PreparedStatement is available.

I have also converted the remaining query in AgentInfoDAOImpl into a
prepared statement, and logged the exceptions caused during
parse/execution errors. Another small change is changing the operator
field in BinaryExpressionNode to an Operator type, and using the field
directly instead of calling the getter in createExpression. I have also
cleaned up some raw types in tests related to prepared statements.

Reviewed-by: jerboaa
Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2013-July/007302.html